--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hotel Website Design By rsBapy
     </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive-style.css">
     <!-- fevicon -->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- Bootstrap  Cdn -->
@@ -72,7 +73,6 @@
 </header>
 <!-- navbar  Section finish-->
 
-    
 <!-- swiper Cdn -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <!-- swiper Cdn -->
