--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive-style.css">
+
     <!-- fevicon -->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- Bootstrap  Cdn -->
@@ -70,8 +71,43 @@
           </div>
         </div>
       </nav>
-</header>
+
+
+
+
+
+
+    </header>
 <!-- navbar  Section finish-->
+
+<!-- banner section start -->
+
+<section id="home" class="banner_wrapper p-0">
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-pagination"></div>
+        <div class="swiper-slide" style="background-image: url(./images/slider/slider2.webp);">
+            <div class="silde-caption text-center">
+                <h1> Welcome  to hotole in Dubai </h1>
+                <p> Lt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that i <p>
+            </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(./images/slider/slider1.webp);">
+          <div class="silde-caption text-center">
+              <h1> Welcome  to hotole in Dubai </h1>
+              <p> Lt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it <p>
+          </div>
+      </div>
+
+       
+        </div>
+      </div>
+    </div>
+</section>
+
+<!-- banner section finish -->
+
+
 
 <!-- swiper Cdn -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
@@ -81,5 +117,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
  <!-- Bootstrap  Cdn -->
+
+
+ <script src="js/main.js"></script>
+
 </body>
 </html>
