--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
       <div class="swiper-wrapper">
        
         <div class="swiper-slide" style="background-image: url(./images/slider/slider2.webp);">
-            <div class="silde-caption text-center">
-                <h1> Welcome  to hotole in Dubai </h1>
-                <p> Lt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that i <p>
+            <div class=" silde-caption text-center">
+                <h1 class=""> Welcome  to hotole in Dubai </h1>
+                <p> Lt is a long established fact that a reader will be distracted by the layout. The point of using Lorem Ipsum is that i <p>
             </div>
         </div>
         <div class="swiper-slide" style="background-image: url(./images/slider/slider1.webp);">
           <div class="silde-caption text-center">
               <h1> Welcome  to hotole in Dubai </h1>
-              <p> Lt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it <p>
+              <p> Lt is a long established fact that a reader will be distracted by the  The point of using Lorem Ipsum is that it <p>
           </div>
       </div>
      
@@ -103,6 +103,44 @@
         </div>
       </div>
       <div class="swiper-pagination"></div>
+    </div>
+
+    <div class="container booking-area">
+      <form class="row">
+        <div class = "col-lg mb-3 mb-lg-0">
+          <input type="date" class="form-control" placeholder="data">
+        </div>
+        <div class = "col-lg mb-3 mb-lg-0">
+          <input type="date" class="form-control" placeholder="data">
+        </div>
+        <div class = "col-lg mb-3 mb-lg-0">
+          <select class="form-select" id="">
+            <option selected>Adults</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+          </select>
+        </div>
+        <div class = "col-lg mb-3 mb-lg-0">
+          <select class="form-select" id="">
+            <option selected>Children</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+          </select>
+        </div>
+        <div class = "col-lg mb-3 mb-lg-0">
+          <button type="submit" class="main-btn rounded-2 px-lg-3">Check Availability</button>
+        </div>
+      </form>
     </div>
 </section>
 
