--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 <section id="about" class = "about_wrapper">
   <div class="container">
       <div class="row flex-lg-row flex-column-reverse">
-        <div class="col-lg-6 text center text-lg-start">
-          <h3>Welcome to <span>Hotel <Br class="d-done d-lg-block">the haven</span> of your weekend </h3>
+        <div class="col-lg-6 text-center text-lg-start">
+          <h3 class>Welcome to <span>Hotel <Br class="d-none d-lg-block">the haven</span> of your weekend </h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when </p>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydne</p>
             <a href="#" class="main-btn mt-4">EXPLORE</a>
@@ -165,6 +165,14 @@
       </div>
   </div>
 </section>
+<!-- about  secton finish -->
+
+<!-- Rooms section -->
+
+<section id="rooms" class="rooms_wrapper"></section>
+
+
+<!-- Rooms section  exit-->
 
 
 <!-- swiper Cdn -->
