--- a/index.html
+++ b/index.html
@@ -169,7 +169,60 @@
 
 <!-- Rooms section -->
 
-<section id="rooms" class="rooms_wrapper"></section>
+<section id="rooms" class="rooms_wrapper">
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 section title text-center mb-5">
+          <h6>what I can do for you</h6>
+          <h3>Our favorite Rooms</h3>
+        </div>
+    </div>
+        <div class="row m-0">
+            <div class="col-md-4 mb-lg-0">
+              <div class="room-items">
+                <img src="./images/images/room/room1.webp"  class="img-fluid" alt="room">
+                  <div class="room-item-wrap">
+                      <div class="room-content">
+                        <h5 class="text-white mb-lg-5 text-decoration-underline"> Royal suit </h5>
+                        <p class="text-white">discover five of our favourtie dresses from our  new  collection that
+                          are destined to be worn and loved immdiately </p>
+                          <P class="text-white fw-bold mt-lg-4">$220/ per night</P>
+                          <a class="main-btn border-white text-white mt-lg-5" href="#">Book Now</a>
+                      </div>
+                  </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-lg-0">
+              <div class="room-items">
+                <img src="./images/images/room/room2.webp"  class="img-fluid" alt="room">
+                  <div class="room-item-wrap">
+                      <div class="room-content">
+                        <h5 class="text-white mb-lg-5 text-decoration-underline"> Royal suit </h5>
+                        <p class="text-white">discover five of our favourtie dresses from our  new  collection that
+                          are destined to be worn and loved immdiately </p>
+                          <P class="text-white fw-bold mt-lg-4">$220/ per night</P>
+                          <a class="main-btn border-white text-white mt-lg-5" href="#">Book Now</a>
+                      </div>
+                  </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-lg-0">
+              <div class="room-items">
+                <img src="./images/images/room/room3.webp"  class="img-fluid" alt="room">
+                  <div class="room-item-wrap">
+                      <div class="room-content">
+                        <h5 class="text-white mb-lg-5 text-decoration-underline"> Royal suit </h5>
+                        <p class="text-white">discover five of our favourtie dresses from our  new  collection that
+                          are destined to be worn and loved immdiately </p>
+                          <P class="text-white fw-bold mt-lg-4">$220/ per night</P>
+                          <a class="main-btn border-white text-white mt-lg-5" href="#">Book Now</a>
+                      </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+  </div>
+</section>
 
 
 <!-- Rooms section  exit-->
