--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <h3>Our Awsome services </h3>
         </div>
     </div>
-    <div class="row align-item-center service-item-wrap">
+    <div class="row align-items-center service-item-wrap">
         <div class="col-lg-7 p-lg-0">
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="spa" role="tabpanel" >
@@ -312,9 +312,44 @@
 </section>
 
 
+<!-- services finsih -->
 
+<!-- counter section -->
 
-
+<div class="counter mt-5">
+  <div class="counter">
+        <div class="row text-center">
+            <div class="col-md-3  mb-lg-0 mb-md-0 mb-5"  >
+              <h1>
+                <span id="count1"> 
+                </span>+
+              </h1>
+                <p>Happy Clients</p>
+            </div>
+            <div class="col-md-3  mb-lg-0 mb-md-0 mb-5"  >
+              <h1>
+                <span id="count2"> 
+                </span>+
+              </h1>
+                <p>New Friendship</p>
+            </div>
+            <div class="col-md-3  mb-lg-0 mb-md-0 mb-5"  >
+              <h1>
+                <span id="count3"> 
+                </span>+
+              </h1>
+                <p>five start Rating</p>
+            </div>
+            <div class="col-md-3  mb-lg-0 mb-md-0 mb-5"  >
+              <h1>
+                <span id="count4"> 
+                </span>+
+              </h1>
+                <p>Served Breakfast</p>
+            </div>
+        </div>
+  </div>
+</div>
 
 
 
