--- a/index.html
+++ b/index.html
@@ -352,6 +352,38 @@
 </div>
 
 
+<!-- counter finish -->
+
+
+<!-- team section -->
+
+<section id="team" class="team_wrapper">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-12 section-title text-center mb-5 ">
+              <h6>
+                What I can do for You
+              </h6>
+              <h3>Our special Staff</h3>
+          </div>
+      </div>
+      <div class="row">
+        
+      </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- swiper Cdn -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
