--- a/index.html
+++ b/index.html
@@ -368,7 +368,78 @@
           </div>
       </div>
       <div class="row">
-        
+        <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card p-0 rounded-3">
+              <img src="images/team/team1.webp" class="img-fluid rounded-3" alt="">
+              <div class="team-info">
+                <h5> Shirely Gibson</h5>
+                <p>Manager</p>
+                <ul class="social-network">
+                    <li><a href="#" ><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" ><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" ><i class="fab fa-google-plus-g"></i></a></li>
+                    <li><a href="#" ><i class="fab fa-vimeo-v"></i></a></li>
+
+
+                </ul>
+              </div>
+            </div>
+
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card p-0 rounded-3">
+            <img src="images/team/team2.webp" class="img-fluid rounded-3" alt="">
+            <div class="team-info">
+              <h5> Ronald Long</h5>
+              <p>Chif Reciption Officer</p>
+              <ul class="social-network">
+                  <li><a href="#" ><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#" ><i class="fab fa-twitter"></i></a></li>
+                  <li><a href="#" ><i class="fab fa-google-plus-g"></i></a></li>
+                  <li><a href="#" ><i class="fab fa-vimeo-v"></i></a></li>
+
+
+              </ul>
+            </div>
+          </div>
+
+      </div>
+      <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card p-0 rounded-3">
+          <img src="images/team/team3.webp" class="img-fluid rounded-3" alt="">
+          <div class="team-info">
+            <h5> Ashley Sanchez</h5>
+            <p>Master Chef</p>
+            <ul class="social-network">
+                <li><a href="#" ><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" ><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" ><i class="fab fa-google-plus-g"></i></a></li>
+                <li><a href="#" ><i class="fab fa-vimeo-v"></i></a></li>
+
+
+            </ul>
+          </div>
+        </div>
+
+    </div>
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="card p-0 rounded-3">
+        <img src="images/team/team4.webp" class="img-fluid rounded-3" alt="">
+        <div class="team-info">
+          <h5> Jesscia Watson</h5>
+          <p>House Keeping</p>
+          <ul class="social-network">
+              <li><a href="#" ><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#" ><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#" ><i class="fab fa-google-plus-g"></i></a></li>
+              <li><a href="#" ><i class="fab fa-vimeo-v"></i></a></li>
+
+
+          </ul>
+        </div>
+      </div>
+
+  </div>
       </div>
   </div>
 </section>
