--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
 <!-- Pricing section -->
 
-<section id="Price" class="price_wrapper">
+<section id="price" class="price_wrapper">
   <div class="container">
       <div class="row">
         <div class="col-sm-12 section-title text-center mb-5 "> 
@@ -627,6 +627,54 @@
 </section>
 
 <!-- Pricing section -->
+
+
+
+<!-- blog section -->
+
+<section id="blog" class="blog_wrapper pb-0">
+
+  <div class="container">
+      <div class="row">
+          <div>
+            <div class="col-sm-12 section-title text-center mb-5 "> 
+              <h6>Say Hello To our  visiters</h6>
+              <h3> Our Blog</h3>
+            </div>
+          </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-6 md-4">
+          <div class="card p-0 border-0 rounded-0">
+              <img src="./images/blog/blog1.webp" alt="">
+              <div class="blog-content bg-white p-4">
+                  <h5 class="text-decoration-underline mb-4">Relax Zone</h5>
+                  <h6>By Admin - February 18, 2018</h6>
+                  <p class="mt-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                  <a href="#" class="main-btn mt-2">Read More</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-6 md-4">
+        <div class="card p-0 border-0 rounded-0">
+            <img src="./images/blog/blog2.webp" alt="">
+            <div class="blog-content bg-white p-4">
+                <h5 class="text-decoration-underline mb-4">Relax Zone</h5>
+                <h6>By Admin - February 18, 2018</h6>
+                <p class="mt-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <a href="#" class="main-btn mt-2">Read More</a>
+            </div>
+        </div>
+    </div>
+      </div>
+
+  </div>
+
+
+</section>
+
 
 
 
