--- a/index.html
+++ b/index.html
@@ -673,6 +673,23 @@
   </div>
 
 
+  <div class="our-partner-silder mt-5">
+      <div class="container swiper our-partner">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">  <img  src="./images/partners/brand1.webp" alt=""> </div>
+          <div class="swiper-slide">  <img  src="./images/partners/brand2.webp" alt=""> </div>
+          <div class="swiper-slide">  <img  src="./images/partners/brand3.webp" alt=""> </div>
+          <div class="swiper-slide">  <img  src="./images/partners/brand4.webp" alt=""> </div>
+          <div class="swiper-slide">  <img  src="./images/partners/brand5.webp" alt=""> </div>
+          <div class="swiper-slide">  <img  src="./images/partners/brand6.webp" alt=""> </div>
+  
+      
+
+        </div>
+      </div>
+  </div>
+
+
 </section>
 
 
