--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="#price">Price</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Blog">Blog</a>
+                <a class="nav-link" href="#blog">Blog</a>
               </li>
               <li class="nav-item mt-3 mt-lg-0">
                 <a class="main-btn" href="#">Book</a>
@@ -691,6 +691,84 @@
 
 
 </section>
+
+
+<!-- footer  section -->
+
+<section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0 ">
+  <div class="container pb-0 ">
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+              <h5> Hotel Location</h5>
+              <p class="ps-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been ....</p>
+            <div class="contact-info">
+              <ul class="list-unstyled ">
+                  <li class=""><a href="#"><i class="fa fa-home me-3 "></i>No. 96 South city,  London</a></li>
+                  <li><a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
+                  <li><a href="#"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
+              </ul>
+            </div>   
+        </div>
+            <div class="col-lg-3 col-md-6" >
+              <h5> More links</h5>
+              <ul class="link-widget p-0">
+                <li><a href="#" class="text-decoration-none">About Us</a></li>
+                <li><a href="#">Our Office </a></li>
+                <li><a href="#">Delivery</a></li>
+                <li><a href="#">Our Store</a></li>
+                <li><a href="#">Guarantee</a></li>
+                <li><a href="#">Buy Gift Card</a></li>
+                <li><a href="#">Return Policy</a></li>
+              </ul>
+
+            </div>
+            <div class="col-lg-3 col-md-6" >
+              <h5> More links</h5>
+              <ul class="link-widget p-0">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Our Office </a></li>
+                <li><a href="#">Delivery</a></li>
+                <li><a href="#">Our Store</a></li>
+                <li><a href="#">Guarantee</a></li>
+                <li><a href="#">Buy Gift Card</a></li>
+                <li><a href="#">Return Policy</a></li>
+              </ul>
+
+            </div>
+
+            <div class="col-lg-3 col-md-6">
+              <h5> Newsletter</h5>
+              <div class="form-group mb-4">
+                <input type="email" class="form-control bg-transparent" placeholder="enter you email here">
+                <button type="submit" class="main-btn rounded-2 mt-3 border-white text-white">Subscribe  </button>
+
+              </div>
+                <h5>Stay Connected</h5>
+              <ul class="social-network d-flex align-items-center p-0">
+                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                  <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+
+              </ul>
+            </div>   
+        </div>
+
+
+      </div>
+
+      </div>
+  </div>
+  <div class="container-fluid copright-section">
+        <p>Copyright <a href="#">@  RSBAPPY.</a> All Rights Reserved</p>
+  </div>
+
+</section>
+
+
+
+
+
 
 
 
