--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
 <!-- footer  section -->
 
-<section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0 ">
+<section id="contact" class="footer_wrapper mt-4  mt-md-0 pb-0 ">
   <div class="container pb-0 ">
       <div class="row">
         <div class="col-lg-3 col-md-6">
@@ -703,35 +703,35 @@
               <p class="ps-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been ....</p>
             <div class="contact-info">
               <ul class="list-unstyled ">
-                  <li class=""><a href="#"><i class="fa fa-home me-3 "></i>No. 96 South city,  London</a></li>
-                  <li><a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
-                  <li><a href="#"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
+                  <li><a href="#" class="text-decoration-none"><i class="fa fa-home me-3 "></i>No. 96 South city,  London</a></li>
+                  <li><a href="#" class="text-decoration-none"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
+                  <li><a href="#" class="text-decoration-none"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
               </ul>
             </div>   
         </div>
             <div class="col-lg-3 col-md-6" >
               <h5> More links</h5>
               <ul class="link-widget p-0">
-                <li><a href="#" class="text-decoration-none">About Us</a></li>
-                <li><a href="#">Our Office </a></li>
-                <li><a href="#">Delivery</a></li>
-                <li><a href="#">Our Store</a></li>
-                <li><a href="#">Guarantee</a></li>
-                <li><a href="#">Buy Gift Card</a></li>
-                <li><a href="#">Return Policy</a></li>
+                <li><a   href="#" class="text-decoration-none">About Us</a></li>
+                <li><a href="#" class="text-decoration-none">Our Office </a></li>
+                <li><a href="#" class="text-decoration-none">Delivery</a></li>
+                <li><a href="#" class="text-decoration-none">Our Store</a></li>
+                <li><a href="#" class="text-decoration-none">Guarantee</a></li>
+                <li><a href="#" class="text-decoration-none">Buy Gift Card</a></li>
+                <li><a href="#" class="text-decoration-none">Return Policy</a></li>
               </ul>
 
             </div>
             <div class="col-lg-3 col-md-6" >
               <h5> More links</h5>
               <ul class="link-widget p-0">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Our Office </a></li>
-                <li><a href="#">Delivery</a></li>
-                <li><a href="#">Our Store</a></li>
-                <li><a href="#">Guarantee</a></li>
-                <li><a href="#">Buy Gift Card</a></li>
-                <li><a href="#">Return Policy</a></li>
+                <li><a href="#" class="text-decoration-none">About Us</a></li>
+                <li><a href="#" class="text-decoration-none">Our Office </a></li>
+                <li><a href="#" class="text-decoration-none">Delivery</a></li>
+                <li><a href="#" class="text-decoration-none">Our Store</a></li>
+                <li><a href="#"class="text-decoration-none">Guarantee</a></li>
+                <li><a href="#" class="text-decoration-none">Buy Gift Card</a></li>
+                <li><a href="#"class="text-decoration-none">Return Policy</a></li>
               </ul>
 
             </div>
@@ -760,7 +760,7 @@
       </div>
   </div>
   <div class="container-fluid copright-section">
-        <p>Copyright <a href="#">@  RSBAPPY.</a> All Rights Reserved</p>
+        <p>Copyright <a href="#" class="text-decoration-none">@  RSBAPPY.</a> All Rights Reserved</p>
   </div>
 
 </section>
