--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 <!-- services Start -->
 <section id="services" class="servides_wrapper">
-<div class="continer">
+  <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 section-title text-center mb-5">
           <h6> We are for you</h6>
@@ -248,12 +248,11 @@
             <div class="tab-pane fade" id="restaurent" role="tabpanel" ">
               <img src="./images/services/service2.webp" alt="servcies">
             </div>
-            <div class="tab-pane fade" id="swimming" role="tabpanel" ">
+            <div class="tab-pane fade" id="swimming" role="tabpanel" "> 
                 <img src="./images/services/service3.webp" alt="">
             </div>
             <div class="tab-pane fade" id="conference" role="tabpanel" ">
-              <img src="./images/services/service6.webp" alt="">
-            </div>
+              <img src="./images/services/service6.webp" alt=""></div>
           </div>
         </div>
         <div class="col-lg-5 position-relative"> 
@@ -304,9 +303,9 @@
           </div>
       </div>
     
-      </div>
+    </div>
             
-</div>
+  </div>
 
 
 </section>
@@ -695,7 +694,7 @@
 
 <!-- footer  section -->
 
-<section id="contact" class="footer_wrapper mt-4  mt-md-0 pb-0 ">
+<section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0 ">
   <div class="container pb-0 ">
       <div class="row">
         <div class="col-lg-3 col-md-6">
