--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 
 <!-- footer  section -->
 
-<section id="contact" class="footer_wrapper mt-3 mt-md-0 pb-0 ">
+<section id="contact" class="footer_wrapper mt-5 pb-0 ">
   <div class="container pb-0 ">
       <div class="row">
         <div class="col-lg-3 col-md-6">
@@ -759,7 +759,7 @@
       </div>
   </div>
   <div class="container-fluid copright-section">
-        <p>Copyright <a href="#" class="text-decoration-none">@  RSBAPPY.</a> All Rights Reserved</p>
+        <p>Copyright <a href="https://rsbappy.github.io/" class="text-decoration-none">@  RSBAPPY.</a> All Rights Reserved</p>
   </div>
 
 </section>
